--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Covid-19 Updates - India</title>
 
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="assets/css/animate.css" />
         <link rel="stylesheet" href="assets/css/font-face.css" />
         <link rel="stylesheet" href="assets/css/reset.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
@@ -71,7 +72,7 @@
                 </div>
             </div> 
             
-            <div class="single-state-cont">
+            <div class="single-state-cont pb-4">
                 <div class="container">
 
                     <div class="source-text d-flex justify-content-between p-2">
@@ -118,7 +119,6 @@
 
                     </div>
                     <div class="row single-state-list">
-                        <!-- <div class=""></div> -->
                     </div>
 
                 </div>
@@ -128,6 +128,7 @@
         <script src="assets/js/vendors/jquery.min.js"></script>
         <script src="assets/js/vendors/waypoints.min.js"></script>
         <script src="assets/js/vendors/counterup.min.js"></script>
+        <script src="assets/js/vendors/wow.min.js"></script>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
