mobile responsive queries added

--- a/index.html
+++ b/index.html
@@ -25,42 +25,42 @@
 
                     <div class="row py-3 justify-content-center">
 
-                        <div class="col-2 d-flex flex-column text-center">
+                        <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 first"> 
                                 <p>Total cases:</p>
                                 <h4 id="tCases"> N/A </h4>
                             </div>
                         </div>
 
-                        <div class="col-2 d-flex flex-column text-center">
+                        <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 second">
                                 <p>Indian Cases:</p>
                                 <h4 id="iCases"> N/A </h4>
                             </div>
                         </div>
 
-                        <div class="col-2 d-flex flex-column text-center">
+                        <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 first">
                                 <p>Foreign Cases:</p>
                                 <h4 id="fCases"> N/A </h4>
                             </div>
                         </div>
 
-                        <div class="col-2 d-flex flex-column text-center">
+                        <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 second"> 
                                 <p>Active Cases:</p>
                                 <h4 id="aCases"> N/A </h4>
                             </div>
                         </div>
 
-                        <div class="col-2 d-flex flex-column text-center">
+                        <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 first">
                                 <p>Recovered:</p>
                                 <h4 id="rCases"> N/A </h4>
                             </div>
                         </div>
 
-                        <div class="col-2 d-flex flex-column text-center">
+                        <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 second">
                                 <p>Deceased:</p>
                                 <h4 id="dCases"> N/A </h4>
@@ -89,19 +89,19 @@
 
                         <div class="col-2">
                             <div class="field p-1 d-flex justify-content-center">
-                                <h3>State / UT</h3>
+                                <h3>State/UT</h3>
                             </div>
                         </div>
 
                         <div class="col-2">
                             <div class="field p-1 d-flex justify-content-center">
-                                <h3>Confirmed Cases</h3>
+                                <h3>Confirmed</h3>
                             </div>
                         </div>
              
                        <div class="col-2">
                             <div class="field p-1 d-flex justify-content-center">
-                                <h3>Active Cases</h3>
+                                <h3>Active</h3>
                             </div>
                         </div>
 
