alignment improved // readme updated

--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
 
                         <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 first"> 
-                                <p>Total cases:</p>
+                                <p>Total:</p>
                                 <h4 id="tCases"> N/A </h4>
                             </div>
                         </div>
 
                         <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 second">
-                                <p>Indian Cases:</p>
+                                <p>Indian:</p>
                                 <h4 id="iCases"> N/A </h4>
                             </div>
                         </div>
 
                         <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 first">
-                                <p>Foreign Cases:</p>
+                                <p>Foreign:</p>
                                 <h4 id="fCases"> N/A </h4>
                             </div>
                         </div>
 
                         <div class="col-md-2 col-sm-3 col-3 d-flex flex-column text-center">
                             <div class="g-stat-cont p-1 second"> 
-                                <p>Active Cases:</p>
+                                <p>Active:</p>
                                 <h4 id="aCases"> N/A </h4>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                 <div class="container">
 
                     <div class="source-text d-flex justify-content-between p-2">
-                        <p class="data-information">
+                        <p class="data-information text-left">
                             Compiled from <a href="https://www.mohfw.gov.in/"> The Ministry of Health and Family Welfare </a>
                             and separately from <a href="https://github.com/amodm/api-covid19-in#unofficial-sources">Unofficial Sources</a>
                         </p>
