footer added with additonal information

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Covid-19 Updates - India</title>
 
         <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
         <link rel="stylesheet" href="assets/css/animate.css" />
         <link rel="stylesheet" href="assets/css/font-face.css" />
         <link rel="stylesheet" href="assets/css/reset.css" />
@@ -123,6 +124,46 @@
 
                 </div>
             </div>
+
+            <div class="additonal-information d-flex justify-content-center flex-column">
+                <div class="container">
+                    <p class="text-center mb-4"> I salute everyone fighting on the frontline</p>
+                    <div class="row justify-content-center">
+                        <!-- <div class="links-nav"></div> -->
+                        <div class="col-md-4 col-8">
+                            <a href="https://github.com/sankshitpandoh/India-covid-19-updates" target="_blank">
+                            <div class="github py-2 px-1">
+                                <h5 class="text-center"> Contribute on Github <i class="fa fa-github"></i></h5>
+                            </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <footer class="main-footer">
+                <div class="container">
+                    <div class="footer-content d-flex flex-column">
+                        <p class="text-center">All rights reserved - <span> <a href="https://github.com/sankshitpandoh" target="_blank">Sankshit Pandoh</a> </span></p>
+                        <div class="social-links">
+                            <ul class="d-flex justify-content-center">
+                                <li class="mx-2">
+                                    <a href="https://github.com/sankshitpandoh" target="_blank"><i class="fa fa-github"></i></a>
+                                </li>
+                                <li class="mx-2">
+                                    <a href="https://www.linkedin.com/in/sankshit-pandoh/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                                <li class="mx-2">
+                                    <a href="mailto:sankshit02pandoh.sp@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+                                </li>
+                                <li class="mx-2">
+                                    <a href="https://www.instagram.com/sankshitpandoh/" target="_blank"><i class="fa fa-instagram"></i></a>
+                                </li>
+                            </ul>
+                        </div>   
+                    </div>
+                </div>
+            </footer>
 
         </div>
         <script src="assets/js/vendors/jquery.min.js"></script>
